fixed css bug related with z-index

--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -1,70 +1,19 @@
-// @import "../mixins/mixins.scss";
-// .modalMain {
-//   height: fit-content;
-//   position: relative;
-//   z-index: 3;
-//   width: 100%;
-//   color: #eceaea;
-//   @include respond(tab-port) {
-//     background-image: linear-gradient(to right bottom, #1a1a2e, #b7bed3);
-//     color: #cfd1d6;
-//   }
-// }
-// .vedioFormModal {
-//   position: absolute;
-//   // z-index: -1;
-//   opacity: 0.8;
-//   height: 100%;
-// }
-
-// video {
-//   width: 100%; /* Ensure the video fills its container */
-//   max-width: 100%; /* Ensure the video doesn't exceed its container's width */
-//   display: block; /* Display the video as a block element */
-//   @include respond(tab-port) {
-//     display: none;
-//   }
-// }
-
-// .firstPara {
-//   // padding-top: 1rem;
-//   margin-bottom: 2rem;
-// }
-// .secondPara {
-//   margin-bottom: 2rem;
-// }
-// .modelTextarea {
-//   position: relative;
-//   font-size: 1.5rem;
-// }
-// .modalButton {
-//   border: 1px solid black;
-//   width: 5rem;
-//   text-decoration: none;
-//   border-radius: 5px;
-//   padding: 5px;
-//   background-color: #28df99;
-//   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-// }
 @import "../mixins/mixins.scss";
-
 .modalMain {
+  background-color: #28df99;
   height: fit-content;
-  position: fixed; /* Use fixed position to ensure it overlays the entire screen */
-  z-index: 10; /* Ensure this is higher than any other element */
+  position: relative;
+  z-index: 3;
   width: 100%;
   color: #eceaea;
-  top: 0; /* Position at the top of the viewport */
-  left: 0; /* Position at the left of the viewport */
   @include respond(tab-port) {
     background-image: linear-gradient(to right bottom, #1a1a2e, #b7bed3);
     color: #cfd1d6;
   }
 }
-
 .vedioFormModal {
   position: absolute;
-  z-index: 3; /* Ensure the video is behind the modal content */
+  z-index: -1;
   opacity: 0.8;
   height: 100%;
 }
@@ -79,19 +28,16 @@ video {
 }
 
 .firstPara {
+  // padding-top: 1rem;
   margin-bottom: 2rem;
 }
-
 .secondPara {
   margin-bottom: 2rem;
 }
-
 .modelTextarea {
-  z-index: 4;
   position: relative;
   font-size: 1.5rem;
 }
-
 .modalButton {
   border: 1px solid black;
   width: 5rem;
